--- a/index.html
+++ b/index.html
@@ -482,8 +482,8 @@
     </div>
 
     <!-- <div class="backdrop is-hidden" data-modal data-modal-close> -->
-    <div class="backdrop" data-modal>
-      <div class="modal">
+    <div class="backdrop" data-modal data-modal-outside>
+      <div class="modal" data-modal-inside>
         <button class="btn-close" type="button" data-modal-close>
           <svg class="icon icon__btn-close">
             <use href="./images/icons.svg#icon-btn-close" width="18" height="18"></use>
